Bug 225055 symlinked bookmark files are broken AGAIN r=bsmedberg sr=bz